# python_basic_diploma

./: .gitignore  README.MD  env.template  loader.py  main.py  pyproject.toml  rapid_api.py  requirements.txt
config_data/: __init__.py  config.py
database/: db.py  hotel.db
handlers/custom_heandlers/: __init__.py  result.py  usen_info_hotel.py
handlers/default_heandlers/: echo.py  help.py  start.py
keyboards/inline/: __init__.py  inline_keyboard.py  price_inline_keyboard.py
keyboards/reply/: __init__.py  menu.py  reply_keyboard.py
states/: contact_information.py
